AmicarDP/src/objects/et4ae5__abTest__c.object
<CustomObject>
    <fields>
        <fullName>et4ae5__Create_Payload__c</fullName>
        <label>Create Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__Custom_Object__c</fullName>
        <label>Custom Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Determine_Winner_By__c</fullName>
        <label>Determine Winner By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Higher unique open rate</fullName>
                </value>
                <value>
                    <fullName>Higher unique click-through rate (CTR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__Test_Type__c</fullName>
        <label>Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subject lines</fullName>
                </value>
                <value>
                    <fullName>Emails</fullName>
                </value>
                <value>
                    <fullName>Content areas</fullName>
                </value>
                <value>
                    <fullName>From names</fullName>
                </value>
                <value>
                    <fullName>Send dates/times</fullName>
                </value>
                <value>
                    <fullName>Preheaders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__abInstanceId__c</fullName>
        <label>AB Instance Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__mid__c</fullName>
        <label>mid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AB Test</label>
    <listViews>
        <fullName>et4ae5__All</fullName>
        <columns>NAME</columns>
        <columns>et4ae5__abInstanceId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>AB Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AB Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>